Implement custom navbar & theme toggle (#14)
* Implement custom navbar & theme toggle

Port fully custom top nav

More styling fixes

Top nav: support alert banner

Improve top nav and tables

* Fix handling of nav links in various paths

* Fix layout bugs and add class for sidebar

* Fix non-portable styles for light/dark toggle

* Homepage: fix paths in staging envs

* Fix top nav on mobile

* Maybe fix yarn lockfile issues?

--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -15,3 +15,362 @@ table.wait-step th {
   background-color: transparent !important;
   border: 0 !important;
 }
+
+a[title="Source"] {
+  float:right;
+  margin: 0 2rem 2rem 2rem;
+}
+
+
+/* Top nav dropdowns have different generated IDs compared to the old site */
+.top-nav .dropdown-menu.show#topnav_dd_about {
+  grid-template-columns: 180px 180px 180px;
+}
+.top-nav .dropdown-menu.show .col-for-xrp_ledger {
+  grid-row: 1 / 3;
+  grid-column: 1;
+}
+.top-nav .dropdown-menu.show#topnav_dd_docs {
+  grid-template-columns: 180px 180px 260px;
+  left: -200px;
+}
+.top-nav .dropdown-menu.show .col-for-popular_pages {
+  grid-column: 3;
+  grid-row: 1 / 4;
+  margin: -40px -40px -40px 0;
+  padding: 40px;
+  background-color: #232325;
+}
+.top-nav .dropdown-menu.show #dropdown-hero-for-docs {
+  grid-column: 1 / 3;
+}
+.top-nav #topnav_dd_community {
+  gap: 0;
+}
+#dropdown-hero-for-community {
+  grid-column: 1;
+}
+@media (min-width: 992px) {
+  .top-nav #topnav_dd_community {
+    width: 360px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  /* Fix dropdown size with top banner present */
+  .top-nav .dropdown-menu.show {
+    height: calc(100vh - 80px - 52px - 46px);
+  }
+
+  .top-nav .dropdown-menu.show#topnav_dd_docs {
+    display: grid;
+    grid-template-columns: minmax(187px, 1fr) minmax(187px, 1fr);
+    gap: 1px;
+  }
+  .top-nav .dropdown-menu.show#topnav_dd_docs .dropdown-hero {
+    grid-column: 1 / 3;
+    grid-row: 1;
+  }
+  .top-nav .dropdown-menu.show .col-for-popular_pages {
+    grid-column: 1 / 3;
+    grid-row: 4;
+    margin: -1px;
+    padding-top: 33px;
+  }
+
+  /* Fix spacing of community dropdown */
+  #topnav_dd_community.show {
+    padding: 1rem 2rem 4rem 2rem;
+  }
+  #dropdown-hero-for-community {
+    padding-left: 0;
+  }
+}
+
+.light .top-nav .dropdown-menu.show .col-for-popular_pages {
+  background-color: #E0E0E1;
+}
+
+/* Fixes for theme toggle. Some of these might be fixable by using overrides that don't add styles instead. */
+.light article,
+.light .styled-page p {
+  color: #000;
+}
+.dark article {
+  color: #fff;
+}
+
+.light body {
+  color: #000;
+}
+
+.dark aside {
+  background-color: unset;
+  color: #fff !important;
+}
+.light aside {
+  background-color: unset;
+  border-right: 0;
+}
+
+.light aside ul a {
+  color: #000;
+}
+
+/* Fix links in left sidebar nav. */
+.dark .page-tree-nav,
+.dark .page-tree-nav a,
+.dark .page-tree-nav span {
+  color: #fff;
+}
+.light .page-tree-nav,
+.light .page-tree-nav a,
+.light .page-tree-nav span {
+  color: #000;
+}
+.dark .page-tree-nav a:hover,
+.dark .page-tree-nav a:hover span {
+  color: #9A52FF;
+  text-decoration: none;
+}
+.light .page-tree-nav a:hover,
+.light .page-tree-nav a:hover span {
+  color: #7919FF;
+  text-decoration: none;
+}
+
+.dark .page-tree-nav > aside {
+  border-right-width: 0;
+}
+
+.page-tree-nav aside div > i {
+  background-image: none;
+  width: 1.75em;
+  height: 1.75em;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  transition: all 0.3s;
+}
+
+.page-tree-nav aside div > i::after {
+  display: inline-block;
+  vertical-align: .34em;
+  content: "";
+  border-top: .4em solid;
+  border-right: .4em solid transparent;
+  border-bottom: 0;
+  border-left: .4em solid transparent;
+}
+
+.dark .page-tree-nav aside div > i::after {
+  border-top-color: #fff;
+}
+.light .page-tree-nav aside div > i::after {
+  border-top-color: #000;
+}
+
+/* right nav scrollspy coloring. ".page-tree-nav + div" is a hack to select
+   the element that contains the center and right columns */
+.light .page-tree-nav + div aside a:hover,
+.light .page-tree-nav + div aside a.active {
+  background-color: #E0E0E1;
+}
+
+/* Search magnifying glass icon */
+.light #search + span {
+  filter: invert(100%);
+}
+
+.light #search {
+  color: #000;
+  background-color: #E0E0E1;
+}
+.dark #search {
+  background-color: #111112;
+}
+
+/* Fixes for tables, esp. in light mode. */
+.dark .page-tree-nav + div details > table td,
+.dark .page-tree-nav + div article > table td,
+.dark .page-tree-nav + div article > p table td,
+.dark .page-tree-nav + div details > table tr,
+.dark .page-tree-nav + div article > table tr,
+.dark .page-tree-nav + div article > p table tr,
+.dark .page-tree-nav + div details > table tr:nth-child(2n),
+.dark .page-tree-nav + div article > table tr:nth-child(2n),
+.dark .page-tree-nav + div article > p table tr:nth-child(2n),
+.light .page-tree-nav + div details > table td,
+.light .page-tree-nav + div article > table td,
+.light .page-tree-nav + div article > p table td,
+.light .page-tree-nav + div details > table tr,
+.light .page-tree-nav + div article > table tr,
+.light .page-tree-nav + div article > p table tr,
+.light .page-tree-nav + div details > table tr:nth-child(2n),
+.light .page-tree-nav + div article > table tr:nth-child(2n),
+.light .page-tree-nav + div article > p table tr:nth-child(2n) {
+  background: none;
+}
+.dark .page-tree-nav + div details > table th,
+.dark .page-tree-nav + div article > table th,
+.dark .page-tree-nav + div article > p table th,
+.light .page-tree-nav + div details > table th,
+.light .page-tree-nav + div article > table th,
+.light .page-tree-nav + div article > p table th {
+  background: none;
+  color: inherit;
+  font-weight: bold;
+  border-width: 0 0 2px 0;
+}
+
+.light .page-tree-nav + div article > table tr,
+.dark .page-tree-nav + div article > table tr {
+  border-top-width: 0;
+}
+.page-tree-nav + div details > table td,
+.page-tree-nav + div article > table td,
+.page-tree-nav + div article > p table td {
+  border-bottom-width: 1px;
+  border-right-width: 0;
+  border-left-width: 0;
+}
+
+/* Fix the height of the thing wrapping the search bar */
+#topnav-pages > span > span {
+  height: auto;
+  width: 100%;
+}
+
+#search {
+  max-width: 100%;
+}
+
+@media only screen and (max-width: 900px) {
+  /* Fix Redocly style that pushes the search down at this breakpoint */
+  #topnav-pages > span > span {
+    margin: 0;
+  }
+}
+
+@media (max-width: 991.98px) {
+    #search {
+      line-height: 40px;
+    }
+}
+
+@media (min-width: 993px) {
+  .top-nav #topnav-pages {
+    flex-grow: 1 !important;
+  }
+
+  #topnav-pages > span {
+    flex-grow: 1;
+  }
+}
+
+#topnav-pages > span > span {
+  line-height: unset;
+}
+
+/* Fix "Last updated" text. ".page-tree-nav + div" is again a proxy for center col */
+.light .page-tree-nav + div time {
+  color: #000;
+}
+
+/* Alert banner CSS, basically same as original */
+.top-banner {
+	height: 46px;
+	background: url(/img/backgrounds/bg-apex-banner.svg);
+	background-position: center;
+	background-color: #7919FF;
+	background-size: cover;
+	padding: 2px 0;
+	color: #fff;
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
+	line-height: 24px;
+}
+@media (min-width: 768px) {
+  .top-banner {
+    padding: 5px 8px;
+  }
+}
+.top-banner p {
+	padding-top: 15px;
+	font-size: 12px;
+	line-height: 15px;
+	text-align: center;
+	margin: auto;
+}
+@media (min-width: 768px) {
+  .top-banner p {
+  	padding-top: 10px;
+  	font-size: 16px;
+  	width: initial;
+  	line-height: 20px;
+  }
+}
+.top-banner .btn {
+  margin-top: 4px;
+  margin-left: 8px;
+  font-size: 12px;
+}
+@media (min-width: 768px) {
+  .top-banner .btn {
+    margin-top: 2px;
+    margin-left: 16px;
+    font-size: 16px;
+  }
+}
+.light .top-banner .btn-outline-secondary {
+  color: #E0E0E1;
+  border-color: #E0E0E1;
+}
+html.light .top-banner .btn-outline-secondary:not(:disabled):not(.disabled):hover {
+  color: #111112;
+  background-color: #E0E0E1;
+  border-color: #E0E0E1;
+}
+
+/* Fix mobile nav issues */
+@media (max-width: 991.98px) {
+  section .top-nav #top-main-nav {
+    position: relative;
+  }
+
+  /* Fix the search inner wrapper */
+  section #topnav-pages > span > span {
+    margin-left: 0;
+  }
+
+  /* Fix the search outer wrapper */
+  section #topnav-pages > span {
+    display: block;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 72px;
+    transition: all .2s ease;
+  }
+
+  #search {
+    padding: 1rem 2rem;
+    border-radius: 0;
+  }
+  /* hide search when mobile "dropdown" equivalent expanded */
+  .top-nav #top-main-nav.submenu-expanded #topnav-pages > span {
+    height: 0;
+    overflow: clip;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .light .top-nav .navbar-collapse .nav-item {
+    background-color: #E0E0E1;
+  }
+  .dark .top-nav .navbar-collapse .nav-item {
+    background-color: #111112;
+  }
+
+}
