--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -420,4 +420,72 @@ html.light .top-banner .btn-outline-secondary:not(:disabled):not(.disabled):hove
 }
 
 
+@media (max-width: 767.98px) {
+  .btn-arrow-out {
+    display: block;
+    width: 100%;
+  }
+}
 
+.btn-arrow-out::after {
+  background-position: left 0px bottom 0px;
+  content: "\00a0";
+  background-image: url(/img/icons/arrow-up-right-white.svg);
+  background-repeat: no-repeat;
+  display: inline-block;
+  padding: 4px 8px 4px 12px;
+  transition: background-position 0.3s ease-in-out;
+  margin-left: 4px;
+}
+
+.btn-arrow-out:hover::after {
+  background-position: left 4px bottom 4px;
+}
+
+
+
+/* photo banner */
+#container-scroll {
+  height:160px; 
+  position:relative; 
+  overflow:hidden;
+  margin-top: 80px;
+  margin-bottom: 64px;
+}
+
+.photobanner {
+  position:absolute; 
+  top:0px; 
+  left:0px; 
+  overflow:hidden; 
+  white-space: nowrap;
+  animation: bannermove 40s linear infinite;
+}
+
+.photobanner-bottom {
+  top:112px; 
+}
+
+.photobanner img {    
+  margin: 0 0.5em 
+}
+
+@keyframes bannermove {
+  0% {
+      transform: translate(0, 0);
+  }
+  100% {
+      transform: translate(-50%, 0);
+  }
+}
+
+#carouselSlidesOnly{
+  height: 392px;
+  margin-bottom: 40px;
+}
+@media (min-width: 992px) {
+  #carouselSlidesOnly{
+    height: 320px;
+    margin-bottom: 104px;
+  }
+}
