--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -489,3 +489,59 @@ html.light .top-banner .btn-outline-secondary:not(:disabled):not(.disabled):hove
     margin-bottom: 104px;
   }
 }
+
+.page-faq {
+  background-image: url(../img/backgrounds/faq-bg.svg);
+  background-repeat: no-repeat;
+}
+
+.page-faq h6:first-of-type {
+    color: #4CAF50 !important;
+    margin-bottom: 1rem;
+    margin-top: 2.5rem;
+    font-size: 1.25rem;
+    line-height: 26px;
+    text-align: center;
+  }
+
+@media (min-width: 992px){
+    .page-faq h6:first-of-type{
+      margin-top: 6.5rem;
+    }
+  }
+
+.page-faq h1 {
+    font-size: 2.625rem;
+    line-height: 1.2;
+    margin-top: 0;
+    margin-bottom: 5rem;
+    text-align: center;}
+@media (min-width: 992px){
+      .page-faq h1{
+        font-size: 3.875rem;
+        margin-bottom: 13rem;
+      }
+    }
+
+.page-faq  h2 {
+  margin-top: 13rem;
+  font-size: 2rem;
+  line-height: 2.375rem;
+  text-align: center;
+  font-weight: 700;
+}
+.d-flex-column{
+  box-sizing: border-box;
+}
+.page-faq p{
+  font-size: 1rem;
+  line-height: 24px;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight:normal;
+}
