--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -716,3 +716,28 @@ html.light .top-banner .btn-outline-secondary:not(:disabled):not(.disabled):hove
   font-size: 3.875rem;
   font-weight:bold;
 }
+h1{
+  font-size: 3.875rem; 
+}
+.light .eyebrow{
+  color:#111112
+}
+.eyebrow{
+  color:#E0E0E1
+}
+.page-uses{
+  background-image: url(../img/backgrounds/use-cases-blue.svg);
+  background-repeat: no-repeat;
+}
+.answer-wrapper p{
+  font-family: Work Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+}
+
+.page-events #event-hero-image {
+  height: 100%;
+  min-height: 209px;
+  background: url(../img/events/event-hero1@2x.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
