--- a/static/css/fixes.css
+++ b/static/css/fixes.css
@@ -751,8 +751,16 @@ h1{
   width: 32px;
   height: 27px;
 }
-.biz-logo {
-  width:50px;
-  height:50px; 
+.biz-logo{
+  width: 50px !important;
+  height: 50px !important;
 }
 
+.use-cases-img{
+  width: 50px !important;
+  height: 50px !important;
+}
+.benefit-img{
+  width: 50px !important;
+  height: 50px !important;
+}
